# vetorizador

./: .gitignore  pyproject.toml
data/: relatorio_aso.docx
vetorizador/: listar_documentos.py  vetorizador.py
